# conjugate-gradient-method

./: Makefile  Makefile.am  Makefile.in  README.md  Sovler  cgm.c  cgm.h  common.mk  config.h  config.h.in  config.status  configure  configure.ac  function.c  function.h  hoge.mk  main.c  solver
.deps/: cgm.Po  function.Po  main.Po
Sovler.dSYM/Contents/: Info.plist
Sovler.dSYM/Contents/Resources/DWARF/: Sovler
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
output/: his.txt  x.txt
